from sqlalchemy import Column, Integer, String

from app.database.database import Base


class IssueCategory(Base):
    __tablename__ = "issue_categories"

    id = Column(Integer, primary_key=True, index=True)

    name = Column(
        String(100),
        unique=True,
        nullable=False
    )

    description = Column(
        String(255),
        nullable=True
    )